# onebtc

./: .gitignore  LICENSE  README.md  RELAY_README.md  go.mod  go.sum  package.json  requirements.txt  truffle-config.js  truffle.js
clients/: .rustfmt.toml  Cargo.toml
clients/bitcoin/: Cargo.toml
clients/bitcoin/script/: integration_test.sh
clients/bitcoin/src/: addr.rs  cli.rs  error.rs  lib.rs
clients/bitcoin/tests/: integration_test.rs
clients/runtime/: Cargo.toml
clients/runtime/src/: connection.rs  error.rs  lib.rs  rpc.rs  types.rs  web3.rs
clients/web3/: Cargo.toml
clients/web3/src/: confirm.rs  contract.rs  filter.rs  hmy.rs  lib.rs  namespace.rs
cmd/btcrelay/: .gitignore  README.md  main.go
contract/bridge/: README.md  hardhat.config.js  package-lock.json  package.json  truffle-config.js
contract/bridge/contracts/: Collateral.sol  ExchangeRateOracle.sol  ExchangeRateOracleV2.sol  Fee.sol  IExchangeRateOracle.sol  IRelay.sol  IVaultRegistry.sol  IVaultReward.sol  Issue.sol  OneBtc.sol  Redeem.sol  (+14 more)
contract/relay/: LICENSE  README.md  hardhat.config.js  package.json
contracts/: .gitignore  BTCHeaderStore.sol  BTCRelay.sol  BTCRelayAlt.sol  Utils.sol
migrations/: 3_BTCRelayAlt.js
relay-contract/: .gitignore  README.md
relay-contract/contracts/: BTCRelay.sol
relay-contract/old_contracts/: BTCRelayTest.sol
relay-contract/test/: storeHeader.test.js  test-helpers.js
specs/: README.md  autobuild.sh  latexbuild.sh  requirements.txt
specs/btcrelay-spec/: .gitignore  autobuild.sh
specs/onebtc-spec/: README.md  autobuild.sh
test/: constants.js  helperFunctions.test.js  helpers.js  storeHeader.test.js
test/testdata/: README.md  blocks.json  headers.json  testdata.py  tx_proof
(+129 files in other folders)
