[package]
name = "bitcoin"
version = "0.1.0"
edition = "2018"
authors = ["Freezy Gem"]

[features]
regtest-mine-on-tx = []
regtest-manual-mining = []
# cli = ["clap"]
uses-bitcoind = []

[dependencies]
thiserror = "1"
async-trait = "0.1.51"
tokio = { version = "1", features = ["full"] }
clap = { version = "3.0.0-beta.2" }
futures = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scale-info = { version = "0.10.0", features = ["derive"] }
fixed-hash = "0.7"
backoff = { version = "0.3", features = ["tokio"] }
hex = "0.4"
num = "0.2"
num-traits = "0.2"
num-derive = "0.3"
hyper = "0.10"
log = "0.4"
bitcoincore-rpc = { version = "0.13.0" }

[dev-dependencies]
mockall = "0.10"
regex = "1.4"
secp256k1 = { version = "0.20", features = ["rand-std"] }
