[package]
name = "runtime"
version = "0.1.0"
edition = "2018"

[features]
default = []

[dependencies]
backoff = { version = "0.3.0", features = ["tokio"] }
futures = "0.3.5"
log = "0.4.0"
serde_json = "1.0.57"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
web3 = "0.17.0"

[dev-dependencies]
hex-literal = "0.3"
