[package]
name = "runtime"
version = "0.1.0"
edition = "2018"

[features]
default = []

[dependencies]
async-trait = "0.1.51"
backoff = { version = "0.3.0", features = ["tokio"] }
futures = "0.3.5"
log = "0.4.0"
serde_json = "1.0.57"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
secp256k1 = "0.20"
bitcoin = { path = "../bitcoin" }
hmy-web3 = { path = "../web3" }

[dev-dependencies]
hex-literal = "0.3"
